@@ -1,3 +1,4 @@
+() = evalfile ("./common.sl");
 require("readascii");
 
 private define make_xyz_data (xmin, xmax, n)
@@ -63,11 +64,11 @@ private define run_test (make_lines_func)
 
    na = readascii (lines, &xa, &ya, &za; delim=",", lastlinenum=&lastlinenum);
    if (n != na)
-     throw RunTimeError, "readascii returned $na, not $n as expected"$;
+     failed ("readascii returned $na, not $n as expected"$);
    if (lastlinenum != n)
-     throw RunTimeError, "lastlinenum=$lastlinenum instead of $n"$;
+     failed ("lastlinenum=$lastlinenum instead of $n"$);
    if (any (fneqs(x, xa) or fneqs(y, ya) or fneqs(z, za)))
-     throw RunTimeError, "Arrays have unequal values";
+     failed ("Arrays have unequal values");
 
    variable x1, y1, z1, n1 = 2;
    (x1, y1, z1) = make_xyz_data (xmax, 2*xmax, n1);
@@ -75,22 +76,22 @@ private define run_test (make_lines_func)
 
    na = readascii (lines, &xa, &ya, &za; delim=",", lastlinenum=&lastlinenum);
    if (n+n1 != na)
-     throw RunTimeError, "readascii returned $na, not $n1 + $n2 as expected"$;
+     failed ("readascii returned $na, not $n1 + $n2 as expected"$);
    if (lastlinenum != length (lines))
-     throw RunTimeError, "lastlinenum=$lastlinenum instead of $n"$;
+     failed ("lastlinenum=$lastlinenum instead of $n"$);
    if (any (fneqs([x,x1], xa) or fneqs([y,y1], ya) or fneqs([z,z1], za)))
-     throw RunTimeError, "Arrays have unequal values";
+     failed ("Arrays have unequal values");
 
    na = readascii (lines, &xa, &ya, &za; delim=",", lastlinenum=&lastlinenum,
 		   lastline=&lastline, stop_on_mismatch);
    if (n != na)
-     throw RunTimeError, "readascii returned $na, not $n as expected"$;
+     failed ("readascii returned $na, not $n as expected"$);
    if (lastlinenum != n+1)
-     throw RunTimeError, "lastlinenum=$lastlinenum instead of $n+1"$;
+     failed ("lastlinenum=$lastlinenum instead of $n+1"$);
    if (any (fneqs(x, xa) or fneqs(y, ya) or fneqs(z, za)))
-     throw RunTimeError, "Arrays have unequal values";
+     failed ("Arrays have unequal values");
    if (lastline != "@\n")
-     throw RunTimeError, "lastline=$lastline instead of @\n";
+     failed ("lastline=$lastline instead of @\n");
 
    lines = concat_lines (lines, "%%%%%%\n");
 
@@ -98,44 +99,46 @@ private define run_test (make_lines_func)
 		   lastlinenum=&lastlinenum, lastline=&lastline,
 		   comment="@", stop_on_mismatch);
    if (n+n1 != na)
-     throw RunTimeError, "readascii returned $na, not return $n+$n1 as expected"$;
+     failed ("readascii returned $na, not return $n+$n1 as expected"$);
    if (lastlinenum != length (lines))
-     throw RunTimeError, "lastlinenum=$lastlinenum instead of $n"$;
+     failed ("lastlinenum=$lastlinenum instead of $n"$);
    if (any (fneqs([x,x1], xa) or fneqs([y,y1], ya) or fneqs([z,z1], za)))
-     throw RunTimeError, "Arrays have unequal values";
+     failed ("Arrays have unequal values");
    if (lastline != lines[-1])
-     throw RunTimeError, "lastline=$lastline instead of lines[-1]\n";
+     failed ("lastline=$lastline instead of lines[-1]");
 
    na = readascii (lines, &za, &xa; delim=",", cols=[1,3],
 		   lastlinenum=&lastlinenum, lastline=&lastline,
 		   comment="@", stop_on_mismatch);
    if (n+n1 != na)
-     throw RunTimeError, "readascii returned $na, not return $n+$n1 as expected"$;
+     failed ("readascii returned $na, not return $n+$n1 as expected"$);
    if (lastlinenum != length (lines))
-     throw RunTimeError, "lastlinenum=$lastlinenum instead of $n"$;
+     failed ("lastlinenum=$lastlinenum instead of $n"$);
    if (any (fneqs([x,x1], za) or fneqs([z,z1], xa)))
-     throw RunTimeError, "Arrays have unequal values";
+     failed ("Arrays have unequal values");
    if (lastline != lines[-1])
-     throw RunTimeError, "lastline=$lastline instead of lines[-1]\n";
+     failed ("lastline=$lastline instead of lines[-1]");
 
    na = readascii (lines, &za, &xa; delim=",", as_list, cols=[1,3],
 		   lastlinenum=&lastlinenum, lastline=&lastline,
 		   comment="@", stop_on_mismatch);
    if (n+n1 != na)
-     throw RunTimeError, "readascii returned $na, not return $n+$n1 as expected"$;
+     failed ("readascii returned $na, not return $n+$n1 as expected"$);
    if (lastlinenum != length (lines))
-     throw RunTimeError, "lastlinenum=$lastlinenum instead of $n"$;
+     failed ("lastlinenum=$lastlinenum instead of $n"$);
    if ((typeof (za) != List_Type) || (typeof (xa) != List_Type))
-     throw RunTimeError, "Used as_list qualifier but did not get a list, got $za,$xa"$;
+     failed ("Used as_list qualifier but did not get a list, got $za,$xa"$);
    if (any (fneqs([x,x1], [__push_list(za)])
 	    or fneqs([z,z1], [__push_list(xa)] )))
-     throw RunTimeError, "Arrays have unequal values";
+     failed ("Arrays have unequal values");
    if (lastline != lines[-1])
-     throw RunTimeError, "lastline=$lastline instead of lines[-1]\n";
+     failed ("lastline=$lastline instead of lines[-1]");
 }
 
 define slsh_main ()
 {
+   start_test ("readascii");
    run_test (&make_lines_array);
    run_test (&make_lines_list);
+   end_test ();
 }
