@@ -1,6 +1,8 @@
+() = evalfile ("./common.sl");
+
 require ("structfuns");
 
-define slsh_main ()
+private define test_structfuns ()
 {
    variable s = struct
      {
@@ -15,7 +17,7 @@ define slsh_main ()
        || not _eqs (s1.a1, s.a1[i])
        || not _eqs (s1.a2, s.a2[i,*])
        || not _eqs (s1.a3, s.a3[i,*,*]))
-     throw RunTimeError, "filtering on dim=0 failed";
+     failed ("filtering on dim=0 failed");
 
    i = [1,2];
    s1 = struct_filter (s, i; dim=1, copy);
@@ -23,7 +25,7 @@ define slsh_main ()
        || not _eqs (s1.a1, s.a1)
        || not _eqs (s1.a2, s.a2[*,i])
        || not _eqs (s1.a3, s.a3[*,i,*]))
-     throw RunTimeError, "filtering on dim=1 failed";
+     failed ("filtering on dim=1 failed");
 
    i = [1,2];
    s1 = struct_filter (s, i; dim=2, copy);
@@ -31,6 +33,15 @@ define slsh_main ()
        || not _eqs (s1.a1, s.a1)
        || not _eqs (s1.a2, s.a2)
        || not _eqs (s1.a3, s.a3[*,*,i]))
-     throw RunTimeError, "filtering on dim=1 failed";
+     failed ("filtering on dim=1 failed");
+}
+
+define slsh_main ()
+{
+   start_test ("structfuns");
+
+   test_structfuns ();
+
+   end_test ();
 }
 
